# scotty-from-ground-up

./: README.md  scotty-from-ground-up.cabal  stack.yaml
app/: Main.hs  Main1.hs  Main2.hs  Main3.hs  Main4.hs  Main5.hs  Main6.hs  Main7.hs  Main8.hs  question.md  question1.md
src/: Lib.hs
