name:                scotty-from-ground-up
version:             0.1.0.0
synopsis:            Example to build up a toy Scotty like web framework
description:         Please see README.md
homepage:            https://github.com/gdevanla/scotty-from-ground-up
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          grdvnl@gmail.com
copyright:           2017 Guru Devanla
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable main1
  hs-source-dirs:      app
  main-is:             Main1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , vector
                     , trifecta
                     , transformers
                     , free
                     , contravariant
                     , mtl
  default-language:    Haskell2010

executable main2
  hs-source-dirs:      app
  main-is:             Main2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     
                     , containers
                     , vector
                     , trifecta
                     , transformers
                     , free
                     , contravariant
                     , mtl
  default-language:    Haskell2010

executable main3
  hs-source-dirs:      app
  main-is:             Main3.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     
                     , containers
                     , vector
                     , trifecta
                     , transformers
                     , free
                     , contravariant
                     , mtl
  default-language:    Haskell2010

executable main4
  hs-source-dirs:      app
  main-is:             Main4.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     
                     , containers
                     , vector
                     , trifecta
                     , transformers
                     , free
                     , contravariant
                     , mtl
  default-language:    Haskell2010

executable main5
  hs-source-dirs:      app
  main-is:             Main5.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     
                     , containers
                     , vector
                     , trifecta
                     , transformers
                     , free
                     , contravariant
                     , mtl
  default-language:    Haskell2010
    
executable main6
  hs-source-dirs:      app
  main-is:             Main6.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     
                     , containers
                     , vector
                     , trifecta
                     , transformers
                     , free
                     , contravariant
                     , mtl
  default-language:    Haskell2010

executable main7
  hs-source-dirs:      app
  main-is:             Main7.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     
                     , containers
                     , vector
                     , trifecta
                     , transformers
                     , free
                     , contravariant
                     , mtl
  default-language:    Haskell2010

-- executable main8
--   hs-source-dirs:      app
--   main-is:             Main8.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      
--                      , containers
--                      , vector
--                      , trifecta
--                      , transformers
--                      , free
--                      , contravariant
--                      , mtl
--   default-language:    Haskell2010

-- executable main9
--   hs-source-dirs:      app
--   main-is:             Main9.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      
--                      , containers
--                      , vector
--                      , trifecta
--                      , transformers
--                      , free
--                      , contravariant
--                      , mtl
--   default-language:    Haskell2010
  

test-suite hask-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     
                     , containers
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gdevanla/scotty-from-ground-up
